--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "~13.3.9",
     "@angular/platform-browser-dynamic": "~13.3.9",
     "@angular/router": "~13.3.9",
+    "@capacitor/android": "^4.6.2",
+    "@capacitor/angular": "^2.0.3",
+    "@capacitor/core": "latest",
     "cesium": "^1.93.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -28,6 +31,7 @@
     "@angular-devkit/build-angular": "~13.3.6",
     "@angular/cli": "~13.3.6",
     "@angular/compiler-cli": "~13.3.9",
+    "@capacitor/cli": "^4.6.2",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
