--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.3.9",
     "@angular/platform-browser-dynamic": "~13.3.9",
     "@angular/router": "~13.3.9",
+    "@capacitor-community/background-geolocation": "^1.2.7",
     "@capacitor/android": "^4.6.2",
     "@capacitor/angular": "^2.0.3",
     "@capacitor/core": "latest",
