this commit is working with capacitor 2.5

--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "@angular/platform-browser": "~13.3.9",
     "@angular/platform-browser-dynamic": "~13.3.9",
     "@angular/router": "~13.3.9",
-    "@capacitor-community/background-geolocation": "^1.2.7",
-    "@capacitor/android": "^4.6.2",
-    "@capacitor/angular": "^2.0.3",
-    "@capacitor/core": "latest",
-    "cesium": "^1.93.0",
+    "@capacitor-community/background-geolocation": "0.3.17",
+    "@capacitor-community/http": "0.3.2",
+    "@capacitor/android": "2.5.0",
+    "@capacitor/core": "2.5.0",
+    "cesium": "1.80.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -32,7 +32,7 @@
     "@angular-devkit/build-angular": "~13.3.6",
     "@angular/cli": "~13.3.6",
     "@angular/compiler-cli": "~13.3.9",
-    "@capacitor/cli": "^4.6.2",
+    "@capacitor/cli": "2.5.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
